# mining-poc

./: Cargo.toml  README.md  build.sh  miner.html  start.sh
src/: lib.rs
