[package]
name = "mining-poc"
version = "0.1.0"
edition = "2021"

[features]
default = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
sha2 = {  version = "0.10" }
hex = {  version = "0.4.3" }
console_error_panic_hook = { version = "0.1.7", optional = true }
